chore(remote-database):put all request mentorship sessions information into the database [ Finshes #168425228]
