# server/middleWare/dataMiddleWare.js
@@ -11,7 +11,6 @@ class dataMiddleware {
     return dbClient.then((client) => client.query(getSpecificSession,
       [parseInt(req.params.sessionId, 10)])
       .then((session) => {
-        if (session.rows.length === 0) return res.status(404);
         if (session.rows[0].status === 'accepted') return res.status(409).json({ status: 409, message: 'It has been already accepted' });
         if (session.rows[0].status === 'rejected') return res.status(409).json({ status: 409, message: 'It has been already rejected' });
         next();
@@ -22,7 +21,7 @@ class dataMiddleware {
     return dbClient.then((client) => client.query(specificUser,
       [parseInt(req.params.userId, 10)])
       .then((user) => {
-        if (user.userrole === 'mentor') return res.status(409).json({ status: 409, message: 'This user is a mentor you allowed to change mentees' });
+        if (user.rows[0].userrole === 'mentor') return res.status(409).json({ status: 409, message: 'This user is a mentor you allowed to change mentees' });
         next();
       }).catch((dberr) => res.status(502).json({ status: 502, error: dberr })));
   }
